Fixes timer invocation after app restarts. (#363)